--- a/Weather-App/index.html
+++ b/Weather-App/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Weather App</title>
+  <title>Weather Definer 3000</title>
   <link rel="icon" href="images/001-meteorology.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css" id="CSS-source">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,19 +10,12 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="crossorigin=""></script>
 </head>
 <body>
-  <div id="website-container">
-    <div id="popup">
-      <p class="popup-text">Try mobile version of the website</p>
-      <p class="popup-text">Try the Konami Code!</p>
-      <button onclick="closePopup()">Close</button>
-    </div>
-
     <div id="header-container">
       <div id="weather-app-icon">
         <img src="images/001-meteorology.png" alt="Weather App Icon">
       </div>
       <div id="weather-app-title">
-        <h1>Weather App</h1>
+        <h1>Weather Definer 3000</h1>
       </div>
       <div class="mode-switch">
         <input type="range" min="1" max="3" value="2" class="slider" id="modeSlider">
@@ -32,7 +25,7 @@
     
     <div id="search-container">
       <div id="location-input-div">
-        <input type="text" id="location-input-field" placeholder="Enter location...">
+        <input type="text" id="location-input-field" placeholder="Enter city...">
       </div>
       <div id="search-button-div">
         <button id="search-button">Search</button>
@@ -82,9 +75,8 @@
     </div>
     <div id="footer-container">
       <div id="footer-text">
-        <h3 id="footer-author">Created by Mateusz Lisewski</h3>
+        <h3 id="footer-author">Yeltore Sanzhar Magzhan edition</h3>
         <p>Weather data provided by <a href="https://openweathermap.org/" target="_blank">OpenWeather</a></p>
-        <p>Icons made by <a href="https://www.freepik.com" target="_blank">Freepik</a> and <a href="https://www.flaticon.com/authors/iconixar" target="_blank">Iconixar</a> from <a href="https://www.flaticon.com/" target="_blank">www.flaticon.com</a></p>
         <p>Map data © <a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a></p>
         <p>Geocoding © <a href="https://www.mapbox.com/" target="_blank">Mapbox</a></p>
       </div>
