--- a/Weather-App/index.html
+++ b/Weather-App/index.html
@@ -15,11 +15,11 @@
         <img src="images/001-meteorology.png" alt="Weather App Icon">
       </div>
       <div id="weather-app-title">
-        <h1>Weather Definer 3000</h1>
+        <h1 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Weather Definer 3000</h1>
       </div>
       <div class="mode-switch">
         <input type="range" min="1" max="3" value="2" class="slider" id="modeSlider">
-        <p>Mode: <span id="modeText">Default</span></p>
+        <p>Type: <span id="modeText">Default</span></p>
       </div>
     </div>
     
@@ -41,21 +41,6 @@
         <div id="current-weather-icon"></div>
       </div>
     </div>
-    <div id="meme-container" style="display: none;">
-      <div id="meme-box"></div>
-    </div>
-    <div id="forecast-hourly-container" style="display: none;">
-      <div id="forecast-hourly-title">
-        <h2 id="forecast-hourly-title-h2">Hourly Forecast</h2>
-      </div>
-      <div id="forecast-hourly-box"></div>
-    </div>
-    <div id="forecast-daily-container" style="display: none;">
-      <div id="forecast-daily-title">
-        <h2 id="forecast-daily-title-h2">Daily Forecast</h2>
-      </div>
-      <div id="forecast-daily-box"></div>
-    </div>
     <div id="map-container" style="display: none;">
       <div id="map-title">
         <h2>Map</h2>
@@ -72,6 +57,18 @@
       <div class="map-box" id="map-box-temperature" style="display: none;"></div>
       <div class="map-box" id="map-box-precipitation" style="display: none;"></div>
       <div class="map-box" id="map-box-wind" style="display: none;"></div>
+    </div>
+    <div id="forecast-hourly-container" style="display: none;">
+      <div id="forecast-hourly-title">
+        <h2 id="forecast-hourly-title-h2">Hourly Forecast</h2>
+      </div>
+      <div id="forecast-hourly-box"></div>
+    </div>
+    <div id="forecast-daily-container" style="display: none;">
+      <div id="forecast-daily-title">
+        <h2 id="forecast-daily-title-h2">Daily Forecast</h2>
+      </div>
+      <div id="forecast-daily-box"></div>
     </div>
     <div id="footer-container">
       <div id="footer-text">
