--- a/Weather-App/index.html
+++ b/Weather-App/index.html
@@ -34,7 +34,7 @@
 
       <div id="current-weather-container" style=" display: none;">
           <div id="current-weather-title">
-            <img src="images/kz.png" style="z-index: 99999;"> 
+            <img src="/Users/magzhanzhumabaev/Desktop/lessons/MYS-AiTU/Weather-App/images/kz.png" style="z-index: 99999;"> 
           </div>
           <div id="current-weather-box">
               <div id="current-weather"></div>
