--- a/Weather-App/index.html
+++ b/Weather-App/index.html
@@ -34,7 +34,7 @@
 
       <div id="current-weather-container" style=" display: none;">
           <div id="current-weather-title">
-            <img src="/Users/magzhanzhumabaev/Desktop/lessons/MYS-AiTU/Weather-App/images/kz.png" style="z-index: 99999;"> 
+            <!-- <img src="/Users/magzhanzhumabaev/Desktop/lessons/MYS-AiTU/Weather-App/images/kz.png" style="z-index: 99999;">  -->
           </div>
           <div id="current-weather-box">
               <div id="current-weather"></div>
@@ -85,7 +85,7 @@
         <p>Map data © <a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a></p>
         <p>Geocoding © <a href="https://www.mapbox.com/" target="_blank">Mapbox</a></p>
         <p>Type: <span id="modeText">Default</span></p>
-        <div style="display: flex; justify-content: center;">
+        <div style="display: none; justify-content: center;">
           <input type="range" min="1" max="3" value="2" class="slider" id="modeSlider">
       </div>
       </div>
